--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "apexcharts": "^4.4.0",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
