--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
     "@fullcalendar/vue3": "^6.1.15",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-image": "^3.12.1",
+    "@tiptap/extension-table": "^3.12.1",
+    "@tiptap/extension-table-cell": "^3.12.1",
+    "@tiptap/extension-table-header": "^3.12.1",
+    "@tiptap/extension-table-row": "^3.12.1",
+    "@tiptap/extension-underline": "^3.12.1",
+    "@tiptap/starter-kit": "^3.12.1",
+    "@tiptap/vue-3": "^3.12.1",
+    "@vueuse/core": "^14.1.0",
     "apexcharts": "^4.4.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
@@ -37,6 +46,7 @@
     "vue-flatpickr-component": "^11.0.5",
     "vue-kanban": "^1.8.0",
     "vue-router": "^4.5.0",
+    "vue-signature-pad": "^3.0.2",
     "vue3-apexcharts": "^1.8.0",
     "vuedraggable": "^4.1.0",
     "vuevectormap": "^2.0.1"
