feat: Implement new AppSidebar component and add administrative views for locations, users, roles, contract types, activity logs, and templates.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/extension-underline": "^3.12.1",
     "@tiptap/starter-kit": "^3.12.1",
     "@tiptap/vue-3": "^3.12.1",
+    "@tinymce/tinymce-vue": "^6.1.0",
     "@vueuse/core": "^14.1.0",
     "apexcharts": "^4.4.0",
     "axios": "^1.13.2",
@@ -42,6 +43,7 @@
     "lucide-vue-next": "^0.474.0",
     "pinia": "^3.0.4",
     "swiper": "^11.2.1",
+    "tinymce": "^6.8.5",
     "vue": "^3.5.13",
     "vue-flatpickr-component": "^11.0.5",
     "vue-kanban": "^1.8.0",
