--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/vue3": "^6.1.15",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tinymce/tinymce-vue": "^6.1.0",
     "@tiptap/extension-image": "^3.12.1",
     "@tiptap/extension-table": "^3.12.1",
     "@tiptap/extension-table-cell": "^3.12.1",
@@ -32,7 +33,6 @@
     "@tiptap/extension-underline": "^3.12.1",
     "@tiptap/starter-kit": "^3.12.1",
     "@tiptap/vue-3": "^3.12.1",
-    "@tinymce/tinymce-vue": "^6.1.0",
     "@vueuse/core": "^14.1.0",
     "apexcharts": "^4.4.0",
     "axios": "^1.13.2",
@@ -72,6 +72,7 @@
     "tailwindcss": "^4.0.0",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vue-tsc": "^2.2.0"
   }
