--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -3,8 +3,6 @@ name: Deploy Frontend (Vue.js)
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'ibcc-frontend/**'
 
 jobs:
   build-and-deploy:
@@ -18,14 +16,12 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: ibcc-frontend/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install Dependencies
-        working-directory: ./ibcc-frontend
         run: npm ci
 
       - name: Build
-        working-directory: ./ibcc-frontend
         run: npm run build
         env:
           VITE_API_BASE_URL: https://ibcc-app.talkstec.com/api
@@ -36,7 +32,7 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./ibcc-frontend/dist/
+          local-dir: ./dist/
           server-dir: ./public_html/
           protocol: ftp
           port: 21
